# agentic_probe_improvement

./: .gitignore  README.md  pyproject.toml
.github/: AGENTS.md
.github/agents/: judge.agent.md  orchestrator.agent.md  redteam.agent.md
.github/agents_folder/: README.md
.github/prompts/: redteam-round.prompt.md
docs/: ORCHESTRATOR_CHAT_RUNBOOK.md  ORCHESTRATOR_CHAT_RUNBOOK_FAST_N.md
outputs/: final_report_false_negative.txt  orchestrator_false_negative_round_0.json  orchestrator_false_negative_round_1.json  orchestrator_round_0.json  orchestrator_round_1.json  redteam_report.txt  redteam_round1.json
probes/: test_probe.pkl
scripts/: run_redteam.py  save_judgments.py
src/agentic_probe_improvement/: __init__.py  prompts.py  tuberlens_adapter.py
src/agentic_probe_improvement.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
